--- a/LandigPage/LadingPage versión3/assets/css/style-login.css
+++ b/LandigPage/LadingPage versión3/assets/css/style-login.css
@@ -10,14 +10,14 @@ body {
     text-align: center;
     justify-content:  center;
     height: 100vh;
-    background-color: #FAF1EB;
+    background-color: #ffffff;
 }
 
 .button-data {
     align-items: center;
     width: 70%;
     padding: 5px 10px;
-    background-color: #FF003B;
+    background-color: #42a362;
     color: white;
     margin-top: 10px;
 }
@@ -85,7 +85,7 @@ body {
 }
 
 .container-form-choose h2{
-    background-color: #ff003c;
+    background-color: #42a362;
     color: #ffffff;
     border-radius: 20px 20px 0 0;
     padding: 15px;
@@ -111,7 +111,7 @@ body {
     align-items: center;
     text-align: center;
     justify-content: center;
-    background-color: #F2E1D2;
+    background-color: #edf8ea;
     width: 50%;
     
 }
@@ -144,7 +144,7 @@ form {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(53, 21, 21, 0.644);
+    background-color: #6fda92;
     padding-block: 30px;
     z-index: 4;
     border-block-end: 1px solid transparent;
@@ -153,7 +153,7 @@ form {
 }
 
 .header-form a{
-    background-color: #FF003B;
+    background-color: #42a362;
     margin: 8px;
     padding: 10px;
     text-decoration: none;
@@ -209,7 +209,7 @@ form p {
     align-items: center;
     width: 70%;
     padding: 5px 10px;
-    background-color: #FF003B;
+    background-color: #42a362;
     color: white;
     margin-top: 10px;
 }
