Configuracion y codificacion de estructura para el Front-end
ste esquema establece la estructura inicial para un proyecto Angular v18, con carpetas y archivos organizados de manera lógica. Incluye la configuración inicial del proyecto, una estructura de carpetas con componentes separados para las secciones principales del front-end (dashboard, recetas, entrenamiento y especialista), y una actualización de las rutas en el archivo app-routing.module.ts para permitir la navegación entre estas secciones.

--- a/Frontend_web/NutriLife-V1/src/app/components/body/body.component.html
+++ b/Frontend_web/NutriLife-V1/src/app/components/body/body.component.html
@@ -1,1 +1,6 @@
-<p>body works!</p>
+<div class="content">
+    <app-header></app-header>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+</div>
