--- a/Frontend_web/NutriLife-V1/src/app/components/header/header.component.html
+++ b/Frontend_web/NutriLife-V1/src/app/components/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<nav>
+    <form action="#">
+        <div class="form-input">
+            <input type="search" placeholder="Search...">
+            <button class="search-btn" type="submit"><i class='bx bx-search'></i></button>
+        </div>
+    </form>
+    <input type="checkbox" id="theme-toggle" hidden>
+    <label for="theme-toggle" class="theme-toggle"></label>
+    <a href="#" class="notif">
+        <i class='bx bx-bell'></i>
+        <span class="count">12</span>
+    </a>
+    <a href="#" class="profile">
+        <img src="IMG/Index/profile-1.jpg">
+    </a>
+</nav>
