--- a/Frontend_web/src/app/home/modules/training/training.component.css
+++ b/Frontend_web/src/app/home/modules/training/training.component.css
@@ -105,5 +105,77 @@
   .filter-section button:hover {
     background-color: #45a049;
   }
+  .exercise-detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .exercise-detail h2 {
+    margin-bottom: 20px;
+  }
+  
+  .video-container {
+    margin-bottom: 20px;
+  }
+  
+  .exercise-info {
+    text-align: center;
+  }
+  
+  .training-container .section {
+    margin-bottom: 20px;
+  }
+  
+  .cards-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .card {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+  }
+  
+  .card img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px 5px 0 0;
+  }
+  
+  .card-content {
+    padding: 10px;
+  }
+  
+  .card-content p {
+    margin: 10px 0;
+  }
+  
+  .card-content button, .close-btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 10px;
+  }
+  
+  .close-btn {
+    width: auto;
+    padding: 10px 20px;
+    margin-top: 20px;
+  }
   
   
