--- a/Frontend_web/src/app/home/modules/recipes/recipes.component.css
+++ b/Frontend_web/src/app/home/modules/recipes/recipes.component.css
@@ -39,6 +39,29 @@
   margin-bottom: 20px;
 }
 
+.ingredients-container {
+  max-height: 75px; /* Ajusta esta altura según tus necesidades */
+  overflow-y: auto; /* Añade scroll vertical si hay más ingredientes de los que caben */
+}
+
+.calories-slider-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centrar elementos horizontalmente */
+  margin-bottom: 20px; /* Espacio inferior */
+}
+
+.calories-range-text {
+  margin-top: 10px; /* Espacio superior */
+  font-size: 14px; /* Tamaño de fuente */
+  color: #666; /* Color de texto */
+}
+
+.slider-wrapper {
+  width: 80%; /* Adjust the width as needed */
+  margin: 0 auto; /* Centers the slider horizontally */
+  padding-top: 20px; /* Adds some top padding */
+}
 @media (max-width: 1024px) {
   .recipe-card {
     width: calc(
