--- a/Frontend_web/src/app/home/modules/recipes/recipes.component.html
+++ b/Frontend_web/src/app/home/modules/recipes/recipes.component.html
@@ -1,6 +1,62 @@
-<!-- src/app/components/recipe-list/recipe-list.component.html -->
 <div>
   <h2>Recipe List</h2>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Tipo</mat-label>
+    <mat-select [(ngModel)]="selectedType">
+      <mat-option value="">Todos</mat-option>
+      <mat-option value="vegetariano">Vegetariano</mat-option>
+      <mat-option value="no vegetariano">No vegetariano</mat-option>
+      <mat-option value="vegano">Vegano</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Objetivo Nutricional</mat-label>
+    <mat-select [(ngModel)]="selectedGoal">
+      <mat-option value="">Todos</mat-option>
+      <mat-option value="Perder peso">Perder peso</mat-option>
+      <mat-option value="Ganar masa muscular">Ganar masa múscular</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-slider min="0" max="1000" step="1" [(ngModel)]="caloriesRange">
+    <!-- Start thumb -->
+    <input
+      matSliderStartThumb
+      type="range"
+      [min]="0"
+      [max]="caloriesRange[1]"
+      [value]="caloriesRange[0]"
+      (input)="handleStartThumbInput($event)"
+    />
+
+    <input
+      matSliderEndThumb
+      type="range"
+      [min]="caloriesRange[0]"
+      [max]="1000"
+      [value]="caloriesRange[1]"
+      (input)="handleEndThumbInput($event)"
+    />
+  </mat-slider>
+
+  <p class="calories-range-text">
+    Rango de calorías: {{ caloriesRange[0] }} - {{ caloriesRange[1] }}
+  </p>
+
+  <button mat-raised-button color="primary" (click)="onFilterButtonClicked()">
+    Aplicar Filtros
+  </button>
+
+  <button mat-raised-button color="primary" (click)="toggleTopRatedRecipes()">
+    {{
+      showTopRated
+        ? "Mostrar Recetas Filtradas"
+        : "Cargar Top 5 Recetas Populares"
+    }}
+  </button>
+
   <div class="recipe-container">
     <div class="recipe-row" *ngFor="let row of recipeRows">
       <div *ngFor="let recipe of row" class="recipe-card">
@@ -19,13 +75,14 @@
           <mat-card-content>
             <p>{{ recipe.description }}</p>
             <p>
-              <strong>Nutritional Goal:</strong> {{ recipe.nutritionalGoal }}
+              <strong>Objetivo Nutricional:</strong>
+              {{ recipe.nutritionalGoal }}
             </p>
-            <p><strong>Total Calories:</strong> {{ recipe.totalCalories }}</p>
-            <p><strong>Score:</strong> {{ recipe.score }}</p>
+            <p><strong>Calorias Totales:</strong> {{ recipe.totalCalories }}</p>
+            <p><strong>Puntuación:</strong> {{ recipe.score }}</p>
             <div>
-              <h4>Ingredients:</h4>
-              <ul>
+              <h4>Ingredientes:</h4>
+              <ul class="ingredients-container">
                 <li *ngFor="let ingredient of recipe.ingredients">
                   - {{ ingredient.name | capitalizeFirst }}
                 </li>
