--- a/Frontend_web/src/app/home/modules/recipes/recipes.component.html
+++ b/Frontend_web/src/app/home/modules/recipes/recipes.component.html
@@ -1,49 +1,52 @@
 <div>
-  <h2>Recipe List</h2>
+  <h2>Recetas</h2>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Tipo</mat-label>
-    <mat-select [(ngModel)]="selectedType">
-      <mat-option value="">Todos</mat-option>
-      <mat-option value="vegetariano">Vegetariano</mat-option>
-      <mat-option value="no vegetariano">No vegetariano</mat-option>
-      <mat-option value="vegano">Vegano</mat-option>
-    </mat-select>
-  </mat-form-field>
+  <div class="filters-container">
+    <mat-form-field appearance="fill" class="tipo-form-field">
+      <mat-label>Tipo</mat-label>
+      <mat-select [(ngModel)]="selectedType">
+        <mat-option value="">Todos</mat-option>
+        <mat-option value="vegetariano">Vegetariano</mat-option>
+        <mat-option value="no vegetariano">No vegetariano</mat-option>
+        <mat-option value="vegano">Vegano</mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Objetivo Nutricional</mat-label>
-    <mat-select [(ngModel)]="selectedGoal">
-      <mat-option value="">Todos</mat-option>
-      <mat-option value="Perder peso">Perder peso</mat-option>
-      <mat-option value="Ganar masa muscular">Ganar masa múscular</mat-option>
-    </mat-select>
-  </mat-form-field>
+    <mat-form-field appearance="fill" class="objetivo-form-field">
+      <mat-label>Objetivo Nutricional</mat-label>
+      <mat-select [(ngModel)]="selectedGoal">
+        <mat-option value="">Todos</mat-option>
+        <mat-option value="Perder peso">Perder peso</mat-option>
+        <mat-option value="Ganar masa muscular">Ganar masa múscular</mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-slider min="0" max="1000" step="1" [(ngModel)]="caloriesRange">
-    <!-- Start thumb -->
-    <input
-      matSliderStartThumb
-      type="range"
-      [min]="0"
-      [max]="caloriesRange[1]"
-      [value]="caloriesRange[0]"
-      (input)="handleStartThumbInput($event)"
-    />
+    <div class="calories-slider-container">
+      <p class="calories-range-text">
+        Rango de calorías: {{ caloriesRange[0] }} - {{ caloriesRange[1] }}
+      </p>
+      <mat-slider min="0" max="1000" step="1" [(ngModel)]="caloriesRange">
+        <!-- Start thumb -->
+        <input
+          matSliderStartThumb
+          type="range"
+          [min]="0"
+          [max]="caloriesRange[1]"
+          [value]="caloriesRange[0]"
+          (input)="handleStartThumbInput($event)"
+        />
 
-    <input
-      matSliderEndThumb
-      type="range"
-      [min]="caloriesRange[0]"
-      [max]="1000"
-      [value]="caloriesRange[1]"
-      (input)="handleEndThumbInput($event)"
-    />
-  </mat-slider>
-
-  <p class="calories-range-text">
-    Rango de calorías: {{ caloriesRange[0] }} - {{ caloriesRange[1] }}
-  </p>
+        <input
+          matSliderEndThumb
+          type="range"
+          [min]="caloriesRange[0]"
+          [max]="1000"
+          [value]="caloriesRange[1]"
+          (input)="handleEndThumbInput($event)"
+        />
+      </mat-slider>
+    </div>
+  </div>
 
   <button mat-raised-button color="primary" (click)="onFilterButtonClicked()">
     Aplicar Filtros
@@ -71,6 +74,7 @@
             mat-card-image
             [src]="recipe.image"
             alt="Image of {{ recipe.name }}"
+            style="height: 250px; width: 100%; object-fit: cover"
           />
           <mat-card-content>
             <p>{{ recipe.description }}</p>
