Modified AngularMaterial Theme
- Modified AngularMaterial Theme to green

--- a/Frontend_web/src/custom-theme.scss
+++ b/Frontend_web/src/custom-theme.scss
@@ -13,7 +13,7 @@
 $NutriLife-V3-theme: mat.define-theme((
   color: (
     theme-type: light,
-    primary: mat.$azure-palette,
+    primary: mat.$green-palette,
     tertiary: mat.$blue-palette,
   ),
   density: (
