--- a/src/app/auth-user/module/register-customer/register-customer.component.html
+++ b/src/app/auth-user/module/register-customer/register-customer.component.html
@@ -1,24 +1,29 @@
 <form autocomplete="off" [formGroup]="form" (ngSubmit)="signup()">
-    <h1>Customer Register</h1>
-    <div class="social-icons">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-google"></i></a>
-      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+  <h1>Customer Register</h1>
+  <div class="social-icons">
+    <a href="#"><i class="fab fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-google"></i></a>
+    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+  </div>
+  <span>or use your account</span>
+  <div class="form-data">
+    <input type="email" placeholder="Email" formControlName="email" />
+    <div class="input-box">
+      <input type="{{ passwordVisible ? 'text' : 'password' }}" id="password" placeholder="Password"
+        formControlName="password" />
+      <i class="bx toggle-password-icon" [class.bx-show]="passwordVisible" [class.bx-hide]="!passwordVisible"
+        (click)="togglePasswordVisibility()"></i>
     </div>
-    <span>or use your account</span>
-    <div class="form-data" >
-        <input type="email" placeholder="Email" formControlName="email"/>
-        <input type="password" placeholder="Password" formControlName="password"/>
-        <input type="text" placeholder="Name" formControlName="name"/>
-        <input type="text" placeholder="Phone number" formControlName="phoneNumber"/>
-        <input type="number" placeholder="Age" formControlName="age"/>
-        <input type="text" placeholder="Weight" formControlName="weight"/>
-        <input type="text" placeholder="Height" formControlName="height"/>
-        <input type="text" placeholder="Alergies" formControlName="alergies"/>
-        <input type="text" placeholder="Diet type" formControlName="dietType"/>
-        <input type="text" placeholder="Diet restriction" formControlName="dietRestriction"/>
-    </div>
-    <a href="#">Do you have an account?</a>
-    <button type="submit">Sign Up</button>
-  </form>
-  
+
+    <input type="text" placeholder="Name" formControlName="name" />
+    <input type="text" placeholder="Phone number" formControlName="phoneNumber" />
+    <input type="number" placeholder="Age" formControlName="age" />
+    <input type="text" placeholder="Weight" formControlName="weight" />
+    <input type="text" placeholder="Height" formControlName="height" />
+    <input type="text" placeholder="Alergies" formControlName="alergies" />
+    <input type="text" placeholder="Diet type" formControlName="dietType" />
+    <input type="text" placeholder="Diet restriction" formControlName="dietRestriction" />
+  </div>
+  <a href="#">Do you have an account?</a>
+  <button type="submit">Sign Up</button>
+</form>
